Fix overflow

--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -24,7 +24,3 @@ ul {
   margin-top: 10px;
   margin-bottom: 12px;
 }
-
-.minHe {
-  min-height: 800px;
-}
